# gb-link

./: Makefile  README.md  primary.c  secondary.c
pico/: CMakeLists.txt  README.md  gb_link.c  gb_link.py  gb_link_debug.py  gb_pin_scanner.py  wire_identify.py
plans/: gb-link-pico-plan.md
